--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <!--- favicon link --->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+  <!--- fontawesome cdn link --->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!--- bootstrap css link --->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
@@ -27,7 +32,7 @@
   <nav class="navbar navbar-expand-lg position-fixed w-100 top-0 start-0">
     <div class="container-lg px-3 py-4 d-flex justify-content-between align-items-center">
       <div class="logo">
-        <img src="/images/logo.svg" width="90">
+        <a><img src="/images/logo.svg" width="90"></a>
       </div>
 
       <ul class="navbar__list d-flex align-items-center">
@@ -287,9 +292,148 @@
       </div>
     </section>
 
+    <!--- cta section --->
 
+    <section class="cta section section-padding px-3">
+      <div class="row">
+        <div class="col">
+          <div class="row container-lg margin-inline-auto">
+            <div class="col cta__wrapper  margin-inline-auto">
+              <div class="cta__content">
+                <h2 class="section__title text-center text-clr-white">
+                  Get early access today
+                </h2>
+                <p class="section__text text-center margin-inline-auto text-clr-light">
+                  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any
+                  questions, our support team would be happy to help you.
+                </p>
+              </div>
+
+              <div class="cta__form__wrapper">
+                <form class="cta__form d-flex flex-column">
+                  <input type="email" class="cta__input margin-inline-auto" placeholder="example@fylo.com">
+                  <button type="submit" class="button cta__button margin-inline-auto">
+                    Get Started For Free
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
+
+  <!--- footer --->
+  <div class="container-fluid">
+    <footer class="row px-3 footer section-padding">
+      <div class="row">
+        <div class="col">
+          <div class="row container-lg margin-inline-auto">
+            <div class="col d-grid">
+              <div class="logo">
+                <a><img src="/images/logo.svg" width="90"></a>
+              </div>
+
+              <div class="footer__list__container  d-grid">
+                <ul class="footer__list footer__contacts__list d-grid" style="padding-inline:0;">
+                  <li class="footer__list__item d-flex ">
+                    <div class="list__icon">
+                      <img src="/images/icon-location.svg">
+                    </div>
+
+                    <a class="section__text text-clr-white">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et
+                      dolore magna aliqua
+                    </a>
+                  </li>
+                  <li class="footer__list__item d-flex ">
+                    <div class="list__icon">
+                      <img src="/images/icon-phone.svg">
+                    </div>
+
+                    <a class="section__text text-clr-white">
+                      +1-543-123-4567
+                    </a>
+                  </li>
+                  <li class="footer__list__item d-flex ">
+                    <div class="list__icon">
+                      <img src="/images/icon-email.svg">
+                    </div>
+
+                    <a class="section__text text-clr-white">
+                      example@fylo.com
+                    </a>
+                  </li>
+                </ul>
+                <div class="footer__wrapper d-flex">
+                  <ul class="footer__list  d-grid" style="padding-inline:0;">
+                    <li class="footer__list__item">
+                      <a class="section__text text-clr-white">
+                        About Us
+                      </a>
+                    </li>
+                    <li class="footer__list__item">
+                      <a class="section__text text-clr-white">
+                        Jobs
+                      </a>
+                    </li>
+                    <li class="footer__list__item">
+                      <a class="section__text text-clr-white">
+                        Press
+                      </a>
+                    </li>
+                    <li class="footer__list__item">
+                      <a class="section__text text-clr-white">
+                        Blog
+                      </a>
+                    </li>
+
+                  </ul>
+                  <ul class="footer__list  d-grid" style="padding-inline:0;">
+                    <li class="footer__list__item">
+                      <a class="section__text text-clr-white">
+                        Contact Us
+                      </a>
+                    </li>
+                    <li class="footer__list__item">
+                      <a class="section__text text-clr-white">
+                        Terms
+                      </a>
+                    </li>
+                    <li class="footer__list__item">
+                      <a class="section__text text-clr-white">
+                        Privacy
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <ul class="footer__list footer__social__list d-flex justify-content-center" style="padding-inline:0;">
+                  <li class="footer__list__item">
+                    <a class=" text-clr-white footer__social__link">
+                      <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li class="footer__list__item">
+                    <a class="text-clr-white footer__social__link">
+                      <i class="fa-brands fa-twitter"></i>
+                    </a>
+                  </li>
+                  <li class="footer__list__item">
+                    <a class="text-clr-white footer__social__link">
+                      <i class="fa-brands fa-instagram"></i>
+                    </a>
+                  </li>
+                </ul>
+
+              </div>
+            </div>
+          </div>
+        </div>
+    </footer>
+  </div>
 
 
   <!--- bootstrap script link --->
