--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     </a>
                   </li>
                 </ul>
-                <div class="footer__wrapper d-flex">
+                <div class="footer__wrapper d-flex flex-column">
                   <ul class="footer__list  d-grid" style="padding-inline:0;">
                     <li class="footer__list__item">
                       <a class="section__text text-clr-white">
